[project]
name = "lineage-engine"
version = "0.1.0"
description = "Real-Time Data Lineage Engine — portfolio project"
requires-python = ">=3.11"

# Dependencias de producción: lo que necesita el proyecto para correr
dependencies = [
    "pydantic>=2.0",        # Modelos de datos con validación automática
    "networkx>=3.0",        # Construcción y análisis del grafo de linaje
    "structlog>=24.0",      # Logging estructurado (JSON en producción)
]

[project.optional-dependencies]
# Dependencias de desarrollo: solo para quien trabaja en el código
dev = [
    "pytest>=8.0",          # Framework de tests
    "pytest-cov>=5.0",      # Cobertura de tests
    "ruff>=0.4",            # Linter + formatter ultrarrápido (reemplaza flake8 + black)
    "mypy>=1.0",            # Verificación de tipos estáticos
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuración de ruff (linter)
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # Errores, imports, upgrades

# Configuración de mypy (tipos)
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# Configuración de pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/lineage_engine --cov-report=term-missing"

# Configuración del paquete (layout src/)
[tool.hatch.build.targets.wheel]
packages = ["src/lineage_engine"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
